welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:45: error: identifier expected but 'var' found.
def motif(var nb: Int):Array = 
          ^Array1:63: error: ':' expected but '}' found.
}
^